src/main/PLIStructureParser.java
/*******************************************************************************
 * Copyright (c) 2009 LegSem.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the GNU Lesser Public License v2.1
 * which accompanies this distribution, and is available at
 * http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 * 
 * Contributors:
 *     LegSem - initial API and implementation
 ******************************************************************************/
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g 2009-10-09 08:51:48

package com.legstar.pli2cob;
import org.apache.commons.logging.Log;
import org.apache.commons.logging.LogFactory;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class PLIStructureParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DATA_ITEM", "LEVEL", "NAME", "ARITHMETIC", "REAL", "COMPLEX", "FIXED", "FLOAT", "DECIMAL", "BINARY", "PRECISION", "SCALING_FACTOR", "SIGNED", "UNSIGNED", "STRING", "BIT", "CHARACTER", "GRAPHIC", "WIDECHAR", "LENGTH", "REFER", "STORAGE", "NONVARYING", "VARYING", "VARYINGZ", "PICTURE", "FILLER", "DIMENSIONS", "DIMENSION", "HBOUND", "LBOUND", "INITIAL", "AUTOMATIC", "STATIC", "BASED", "CONTROLLED", "ALIGNMENT", "ALIGNED", "UNALIGNED", "UNION", "REDEFINES", "DECLARE_KEYWORD", "SEMICOLON", "COMMA", "UNSIGNED_INTEGER", "DATA_ITEM_NAME", "ASTERISK", "REAL_KEYWORD", "COMPLEX_KEYWORD", "FIXED_KEYWORD", "FLOAT_KEYWORD", "PRECISION_KEYWORD", "DECIMAL_KEYWORD", "BINARY_KEYWORD", "BIT_KEYWORD", "SIGNED_KEYWORD", "UNSIGNED_KEYWORD", "CHARACTER_KEYWORD", "WIDECHAR_KEYWORD", "GRAPHIC_KEYWORD", "REFER_KEYWORD", "NONVARYING_KEYWORD", "VARYING_KEYWORD", "VARYINGZ_KEYWORD", "PICTURE_KEYWORD", "DIMENSION_KEYWORD", "ALIGNED_KEYWORD", "UNALIGNED_KEYWORD", "INITIAL_KEYWORD", "AUTOMATIC_KEYWORD", "STATIC_KEYWORD", "BASED_KEYWORD", "CONTROLLED_KEYWORD", "UNION_KEYWORD", "LEFT_PAREN", "RIGHT_PAREN", "STRING_LITERAL", "SIGNED_INTEGER", "COLUMN"
    };
    public static final int DATA_ITEM_NAME=49;
    public static final int DATA_ITEM=4;
    public static final int UNALIGNED=42;
    public static final int DIMENSION_KEYWORD=69;
    public static final int HBOUND=33;
    public static final int SIGNED=16;
    public static final int DECIMAL_KEYWORD=56;
    public static final int CONTROLLED_KEYWORD=76;
    public static final int REFER=24;
    public static final int WIDECHAR_KEYWORD=62;
    public static final int REDEFINES=44;
    public static final int PRECISION=14;
    public static final int VARYING=27;
    public static final int FIXED=10;
    public static final int VARYINGZ_KEYWORD=67;
    public static final int SIGNED_KEYWORD=59;
    public static final int AUTOMATIC_KEYWORD=73;
    public static final int VARYING_KEYWORD=66;
    public static final int GRAPHIC_KEYWORD=63;
    public static final int REAL_KEYWORD=51;
    public static final int COMPLEX=9;
    public static final int CHARACTER_KEYWORD=61;
    public static final int FLOAT=11;
    public static final int UNALIGNED_KEYWORD=71;
    public static final int BASED=38;
    public static final int EOF=-1;
    public static final int BINARY_KEYWORD=57;
    public static final int FLOAT_KEYWORD=54;
    public static final int CHARACTER=20;
    public static final int ASTERISK=50;
    public static final int LENGTH=23;
    public static final int UNION_KEYWORD=77;
    public static final int WIDECHAR=22;
    public static final int STORAGE=25;
    public static final int DIMENSIONS=31;
    public static final int RIGHT_PAREN=79;
    public static final int UNSIGNED_INTEGER=48;
    public static final int NAME=6;
    public static final int STRING_LITERAL=80;
    public static final int SCALING_FACTOR=15;
    public static final int VARYINGZ=28;
    public static final int ALIGNMENT=40;
    public static final int COMMA=47;
    public static final int NONVARYING=26;
    public static final int SIGNED_INTEGER=81;
    public static final int ARITHMETIC=7;
    public static final int COLUMN=82;
    public static final int ALIGNED=41;
    public static final int DIMENSION=32;
    public static final int ALIGNED_KEYWORD=70;
    public static final int INITIAL_KEYWORD=72;
    public static final int FILLER=30;
    public static final int CONTROLLED=39;
    public static final int FIXED_KEYWORD=53;
    public static final int PICTURE_KEYWORD=68;
    public static final int GRAPHIC=21;
    public static final int STATIC=37;
    public static final int INITIAL=35;
    public static final int REFER_KEYWORD=64;
    public static final int SEMICOLON=46;
    public static final int NONVARYING_KEYWORD=65;
    public static final int UNSIGNED_KEYWORD=60;
    public static final int LBOUND=34;
    public static final int STATIC_KEYWORD=74;
    public static final int UNION=43;
    public static final int PICTURE=29;
    public static final int REAL=8;
    public static final int UNSIGNED=17;
    public static final int DECIMAL=12;
    public static final int LEVEL=5;
    public static final int COMPLEX_KEYWORD=52;
    public static final int LEFT_PAREN=78;
    public static final int BASED_KEYWORD=75;
    public static final int BIT=19;
    public static final int DECLARE_KEYWORD=45;
    public static final int BINARY=13;
    public static final int PRECISION_KEYWORD=55;
    public static final int BIT_KEYWORD=58;
    public static final int STRING=18;
    public static final int AUTOMATIC=36;

    // delegates
    // delegators


        public PLIStructureParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PLIStructureParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return PLIStructureParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g"; }


        /** Logger. */
        private final Log _log = LogFactory.getLog(getClass());
        
        /** Used to store data item nodes while we are searching for a parent. */
        private Stack < Object > stack = new Stack < Object >();

        /** Helper holding levels for data items stored in the previous stack. */
        private Stack < Integer > levelStack = new Stack < Integer >();

        /** {@inheritDoc} */
        public String getErrorMessage(final RecognitionException e, final String[] tokenNames) {
            if (_log.isDebugEnabled()) {
                List < ? > stack = getRuleInvocationStack(e, this.getClass().getName());
                String msg = null;
                if (e instanceof NoViableAltException) {
                    NoViableAltException nvae = (NoViableAltException) e;
                    msg = super.getErrorMessage(e, tokenNames)
                        + " (decision=" + nvae.decisionNumber
                        + " state=" + nvae.stateNumber + ")"
                        + " decision=<<" + nvae.grammarDecisionDescription + ">>";
                } else {
                   msg = super.getErrorMessage(e, tokenNames);
                }
                return msg + ". Stack=" + stack;
            } else {
                return super.getErrorMessage(e, tokenNames);
            }
        }

        /** {@inheritDoc} */
        public String getTokenErrorDisplay(final Token t) {
            if (_log.isDebugEnabled()) {
                return t.toString();
            } else {
                return super.getTokenErrorDisplay(t);
            }
        }

        /** {@inheritDoc} */
        public void emitErrorMessage(final String msg) {
            _log.error(msg);
        }



    public static class pl1code_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pl1code"
    // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:132:1: pl1code : ( statement )* ;
    public final PLIStructureParser.pl1code_return pl1code() throws RecognitionException {
        PLIStructureParser.pl1code_return retval = new PLIStructureParser.pl1code_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        PLIStructureParser.statement_return statement1 = null;



        try {
            // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:133:5: ( ( statement )* )
            // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:133:7: ( statement )*
            {
            root_0 = (Object)adaptor.nil();

            // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:133:7: ( statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=DATA_ITEM && LA1_0<=COLUMN)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:133:8: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_pl1code278);
            	    statement1=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, statement1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "pl1code"

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:136:1: statement : ( ( declare )=> declare | non_declare );
    public final PLIStructureParser.statement_return statement() throws RecognitionException {
        PLIStructureParser.statement_return retval = new PLIStructureParser.statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        PLIStructureParser.declare_return declare2 = null;

        PLIStructureParser.non_declare_return non_declare3 = null;



        try {
            // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:137:5: ( ( declare )=> declare | non_declare )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==DECLARE_KEYWORD) ) {
                int LA2_1 = input.LA(2);

                if ( (synpred1_PLIStructureParser()) ) {
                    alt2=1;
                }
                else if ( (true) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
            }
            else if ( ((LA2_0>=DATA_ITEM && LA2_0<=REDEFINES)||(LA2_0>=SEMICOLON && LA2_0<=COLUMN)) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:137:7: ( declare )=> declare
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_declare_in_statement301);
                    declare2=declare();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, declare2.getTree());

                    }
                    break;
                case 2 :
                    // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:138:7: non_declare
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_non_declare_in_statement309);
                    non_declare3=non_declare();

                    state._fsp--;
                    if (state.failed) return retval;

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class declare_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declare"
    // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:145:1: declare : DECLARE_KEYWORD data_items SEMICOLON ;
    public final PLIStructureParser.declare_return declare() throws RecognitionException {
        PLIStructureParser.declare_return retval = new PLIStructureParser.declare_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token DECLARE_KEYWORD4=null;
        Token SEMICOLON6=null;
        PLIStructureParser.data_items_return data_items5 = null;


        Object DECLARE_KEYWORD4_tree=null;
        Object SEMICOLON6_tree=null;

        try {
            // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:146:5: ( DECLARE_KEYWORD data_items SEMICOLON )
            // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:146:7: DECLARE_KEYWORD data_items SEMICOLON
            {
            root_0 = (Object)adaptor.nil();

            DECLARE_KEYWORD4=(Token)match(input,DECLARE_KEYWORD,FOLLOW_DECLARE_KEYWORD_in_declare329); if (state.failed) return retval;
            pushFollow(FOLLOW_data_items_in_declare332);
            data_items5=data_items();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, data_items5.getTree());
            SEMICOLON6=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_declare334); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "declare"

    public static class non_declare_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "non_declare"
    // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:153:1: non_declare options {greedy=false; } : ( . )* SEMICOLON ;
    public final PLIStructureParser.non_declare_return non_declare() throws RecognitionException {
        PLIStructureParser.non_declare_return retval = new PLIStructureParser.non_declare_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token wildcard7=null;
        Token SEMICOLON8=null;

        Object wildcard7_tree=null;
        Object SEMICOLON8_tree=null;

        try {
            // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:154:5: ( ( . )* SEMICOLON )
            // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:154:8: ( . )* SEMICOLON
            {
            root_0 = (Object)adaptor.nil();

            // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:154:8: ( . )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==SEMICOLON) ) {
                    alt3=2;
                }
                else if ( ((LA3_0>=DATA_ITEM && LA3_0<=DECLARE_KEYWORD)||(LA3_0>=COMMA && LA3_0<=COLUMN)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:154:8: .
            	    {
            	    wildcard7=(Token)input.LT(1);
            	    matchAny(input); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    wildcard7_tree = (Object)adaptor.create(wildcard7);
            	    adaptor.addChild(root_0, wildcard7_tree);
            	    }

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            SEMICOLON8=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_non_declare365); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            SEMICOLON8_tree = (Object)adaptor.create(SEMICOLON8);
            adaptor.addChild(root_0, SEMICOLON8_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "non_declare"

    public static class data_items_return extends ParserRuleReturnScope {
        public int level;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "data_items"
    // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:160:1: data_items returns [int level] : ( ( data_item_with_children )=> data_item_with_children | data_item );
    public final PLIStructureParser.data_items_return data_items() throws RecognitionException {
        PLIStructureParser.data_items_return retval = new PLIStructureParser.data_items_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        PLIStructureParser.data_item_with_children_return data_item_with_children9 = null;

        PLIStructureParser.data_item_return data_item10 = null;



        try {
            // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:161:5: ( ( data_item_with_children )=> data_item_with_children | data_item )
            int alt4=2;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:161:9: ( data_item_with_children )=> data_item_with_children
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_data_item_with_children_in_data_items393);
                    data_item_with_children9=data_item_with_children();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, data_item_with_children9.getTree());
                    if ( state.backtracking==0 ) {
                      retval.level = (data_item_with_children9!=null?data_item_with_children9.level:0);
                    }

                    }
                    break;
                case 2 :
                    // D:\\Legsem\\Legstar\\sub-projects\\legstar-pli2cob\\src\\main\\antlr3/com/legstar/pli2cob/PLIStructureParser.g:162:9: data_item
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_data_item_in_data_items405);
                    data_item10=data_item();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, data_item10.getTree());
                    if ( state.backtracking==0 ) {
